// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreditCard expect to match snapshot while add 1`] = `
<div>
  <div
    class="MuiBox-root css-iqsdt1"
  >
    <div
      class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-zv7ju9"
        >
          <form
            class="MuiBox-root css-79elbk"
            novalidate=""
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-ymr52d-MuiTypography-root"
            >
              Enter billing information associated with your credit card.
            </p>
            <div
              class="MuiGrid-root MuiGrid-container css-1vam7s3-MuiGrid-root"
            >
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-3 css-1rjcsn7-MuiGrid-root"
              >
                <label
                  class="MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-root MuiFormLabel-colorPrimary Mui-required css-im7n4l-MuiFormLabel-root-MuiInputLabel-root"
                  data-shrink="false"
                  for="cardHolder"
                >
                  <span
                    class="MuiTypography-root MuiTypography-body1 css-1nelj9t-MuiTypography-root"
                  >
                    Name
                  </span>
                  <span
                    aria-hidden="true"
                    class="MuiInputLabel-asterisk MuiFormLabel-asterisk css-kclkbf-MuiFormLabel-asterisk"
                  >
                     
                    *
                  </span>
                </label>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 css-1m6pi2w-MuiGrid-root"
              >
                <div
                  class="MuiInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth css-9dwq1y-MuiInputBase-root-MuiInput-root"
                  required=""
                >
                  <input
                    aria-invalid="false"
                    class="MuiInput-input MuiInputBase-input css-1h0oku3-MuiInputBase-input-MuiInput-input"
                    data-testid="card-holder-input"
                    id="cardHolder"
                    name="cardHolder"
                    placeholder="Name"
                    required=""
                    type="text"
                    value=""
                  />
                </div>
                <p
                  class="MuiFormHelperText-root Mui-error css-14799pm-MuiFormHelperText-root"
                  data-testid="card-holder-error"
                >
                  <span
                    class="notranslate"
                  >
                    ​
                  </span>
                </p>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-3 css-1r7mx2p-MuiGrid-root"
              />
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-3 css-1rjcsn7-MuiGrid-root"
              >
                <label
                  class="MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-root MuiFormLabel-colorPrimary Mui-required css-im7n4l-MuiFormLabel-root-MuiInputLabel-root"
                  data-shrink="false"
                  for="streetAddress"
                >
                  <span
                    class="MuiTypography-root MuiTypography-body1 css-1nelj9t-MuiTypography-root"
                  >
                    Address
                  </span>
                  <span
                    aria-hidden="true"
                    class="MuiInputLabel-asterisk MuiFormLabel-asterisk css-kclkbf-MuiFormLabel-asterisk"
                  >
                     
                    *
                  </span>
                </label>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 css-1m6pi2w-MuiGrid-root"
              >
                <div
                  class="MuiInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth css-9dwq1y-MuiInputBase-root-MuiInput-root"
                  required=""
                >
                  <input
                    aria-invalid="false"
                    class="MuiInput-input MuiInputBase-input css-1h0oku3-MuiInputBase-input-MuiInput-input"
                    data-testid="street-address-input"
                    id="streetAddress"
                    name="streetAddress"
                    placeholder="Address"
                    required=""
                    type="text"
                    value=""
                  />
                </div>
                <p
                  class="MuiFormHelperText-root Mui-error css-14799pm-MuiFormHelperText-root"
                >
                  <span
                    class="notranslate"
                  >
                    ​
                  </span>
                </p>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-3 css-1r7mx2p-MuiGrid-root"
              />
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-3 css-1rjcsn7-MuiGrid-root"
              >
                <label
                  class="MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-root MuiFormLabel-colorPrimary Mui-required css-im7n4l-MuiFormLabel-root-MuiInputLabel-root"
                  data-shrink="false"
                  for="city"
                >
                  <span
                    class="MuiTypography-root MuiTypography-body1 css-1nelj9t-MuiTypography-root"
                  >
                    City
                  </span>
                  <span
                    aria-hidden="true"
                    class="MuiInputLabel-asterisk MuiFormLabel-asterisk css-kclkbf-MuiFormLabel-asterisk"
                  >
                     
                    *
                  </span>
                </label>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 css-1m6pi2w-MuiGrid-root"
              >
                <div
                  class="MuiInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth css-9dwq1y-MuiInputBase-root-MuiInput-root"
                  required=""
                >
                  <input
                    aria-invalid="false"
                    class="MuiInput-input MuiInputBase-input css-1h0oku3-MuiInputBase-input-MuiInput-input"
                    data-testid="city-input"
                    id="city"
                    name="city"
                    placeholder="City"
                    required=""
                    type="text"
                    value=""
                  />
                </div>
                <p
                  class="MuiFormHelperText-root Mui-error css-14799pm-MuiFormHelperText-root"
                >
                  <span
                    class="notranslate"
                  >
                    ​
                  </span>
                </p>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-3 css-1r7mx2p-MuiGrid-root"
              />
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-3 css-1rjcsn7-MuiGrid-root"
              >
                <label
                  class="MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-root MuiFormLabel-colorPrimary Mui-required css-im7n4l-MuiFormLabel-root-MuiInputLabel-root"
                  data-shrink="false"
                  for="postalCode"
                >
                  <span
                    class="MuiTypography-root MuiTypography-body1 css-1nelj9t-MuiTypography-root"
                  >
                    State / Zip Code
                  </span>
                  <span
                    aria-hidden="true"
                    class="MuiInputLabel-asterisk MuiFormLabel-asterisk css-kclkbf-MuiFormLabel-asterisk"
                  >
                     
                    *
                  </span>
                </label>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 css-1m6pi2w-MuiGrid-root"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-4 css-480o17-MuiGrid-root"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-md-5 css-1g4olat-MuiGrid-root"
                  >
                    <div
                      class="MuiInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth css-158wf4r-MuiInputBase-root-MuiInput-root"
                    >
                      <div
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        aria-labelledby="state"
                        class="MuiSelect-select MuiSelect-outlined MuiInput-input MuiInputBase-input css-hb27wf-MuiSelect-select-MuiInputBase-input-MuiInput-input"
                        id="state"
                        role="button"
                        tabindex="0"
                      >
                        State
                      </div>
                      <input
                        aria-hidden="true"
                        class="MuiSelect-nativeInput css-yf8vq0-MuiSelect-nativeInput"
                        data-testid="state-input"
                        name="state"
                        tabindex="-1"
                        value=""
                      />
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconOutlined css-hfutr2-MuiSvgIcon-root-MuiSelect-icon"
                        data-testid="ArrowDropDownIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M7 10l5 5 5-5z"
                        />
                      </svg>
                    </div>
                    <p
                      class="MuiFormHelperText-root css-f30th0-MuiFormHelperText-root"
                    >
                      <span
                        class="notranslate"
                      >
                        ​
                      </span>
                    </p>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-md-7 css-34dgbo-MuiGrid-root"
                  >
                    <div
                      class="MuiInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth css-9dwq1y-MuiInputBase-root-MuiInput-root"
                      required=""
                    >
                      <input
                        aria-invalid="false"
                        class="MuiInput-input MuiInputBase-input css-1h0oku3-MuiInputBase-input-MuiInput-input"
                        data-testid="postal-code-input"
                        id="postalCode"
                        name="postalCode"
                        placeholder="Zip Code"
                        required=""
                        type="text"
                        value=""
                      />
                    </div>
                    <p
                      class="MuiFormHelperText-root Mui-error css-14799pm-MuiFormHelperText-root"
                    >
                      <span
                        class="notranslate"
                      >
                        ​
                      </span>
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-3 css-1r7mx2p-MuiGrid-root"
              />
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-3 css-1r7mx2p-MuiGrid-root"
              />
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 css-159td0a-MuiGrid-root"
              >
                <label
                  class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-j204z7-MuiFormControlLabel-root"
                >
                  <span
                    class="MuiCheckbox-root MuiCheckbox-colorPrimary MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root Mui-checked css-1rq1t8t-MuiButtonBase-root-MuiCheckbox-root"
                  >
                    <input
                      checked=""
                      class="PrivateSwitchBase-input css-1m9pwf3"
                      data-indeterminate="false"
                      id="saveCard"
                      name="saveCard"
                      type="checkbox"
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                      data-testid="CheckBoxIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                      />
                    </svg>
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </span>
                  <span
                    class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-1k41qqb-MuiTypography-root"
                  >
                    Save card to Account
                  </span>
                </label>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-3 css-1r7mx2p-MuiGrid-root"
              />
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-3 css-1r7mx2p-MuiGrid-root"
              />
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 css-qsn9z9-MuiGrid-root"
              >
                <div
                  class="MuiBox-root css-4fwt92"
                >
                  <div
                    class="MuiBox-root css-xvkg36"
                  >
                    <button
                      class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButtonBase-root  css-q7mvqv-MuiButtonBase-root-MuiButton-root"
                      data-testid="add-new-card-button"
                      tabindex="0"
                      type="submit"
                    >
                      <span
                        class="MuiButton-startIcon MuiButton-iconSizeMedium css-1sx3uk1-MuiButton-startIcon"
                      >
                        <svg>
                          launch.svg
                        </svg>
                      </span>
                      Add new card
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiBox-root css-704axj"
            >
              <hr
                class="MuiDivider-root MuiDivider-fullWidth MuiDivider-light css-1acisye-MuiDivider-root"
              />
            </div>
          </form>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-3 css-1r7mx2p-MuiGrid-root"
      />
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-9 css-coobyg-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-rcvewn"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`CreditCard expect to match snapshot while add and loading 1`] = `
<div>
  <div
    class="MuiBox-root css-iqsdt1"
  >
    <div
      class="MuiBox-root css-1tl0rlc"
      data-testid="loader-component"
    >
      <div
        class="MuiBox-root css-hyxlzm"
      >
        <span
          aria-valuenow="100"
          class="MuiCircularProgress-root MuiCircularProgress-determinate MuiCircularProgress-colorPrimary css-1wyqyef-MuiCircularProgress-root"
          role="progressbar"
          style="width: 80px; height: 80px; transform: rotate(-90deg);"
        >
          <svg
            class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle MuiCircularProgress-circleDeterminate css-oxts8u-MuiCircularProgress-circle"
              cx="44"
              cy="44"
              fill="none"
              r="19.5"
              stroke-width="5"
              style="stroke-dasharray: 122.522; stroke-dashoffset: 0.000px;"
            />
          </svg>
        </span>
        <span
          class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-1gse1c1-MuiCircularProgress-root"
          role="progressbar"
          style="width: 80px; height: 80px;"
        >
          <svg
            class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
              cx="44"
              cy="44"
              fill="none"
              r="19.5"
              stroke-width="5"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-zv7ju9"
        >
          <form
            class="MuiBox-root css-79elbk"
            novalidate=""
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-ymr52d-MuiTypography-root"
            >
              Enter billing information associated with your credit card.
            </p>
            <div
              class="MuiGrid-root MuiGrid-container css-1vam7s3-MuiGrid-root"
            >
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-3 css-1rjcsn7-MuiGrid-root"
              >
                <label
                  class="MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-root MuiFormLabel-colorPrimary Mui-required css-im7n4l-MuiFormLabel-root-MuiInputLabel-root"
                  data-shrink="false"
                  for="cardHolder"
                >
                  <span
                    class="MuiTypography-root MuiTypography-body1 css-1nelj9t-MuiTypography-root"
                  >
                    Name
                  </span>
                  <span
                    aria-hidden="true"
                    class="MuiInputLabel-asterisk MuiFormLabel-asterisk css-kclkbf-MuiFormLabel-asterisk"
                  >
                     
                    *
                  </span>
                </label>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 css-1m6pi2w-MuiGrid-root"
              >
                <div
                  class="MuiInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth css-9dwq1y-MuiInputBase-root-MuiInput-root"
                  required=""
                >
                  <input
                    aria-invalid="false"
                    class="MuiInput-input MuiInputBase-input css-1h0oku3-MuiInputBase-input-MuiInput-input"
                    data-testid="card-holder-input"
                    id="cardHolder"
                    name="cardHolder"
                    placeholder="Name"
                    required=""
                    type="text"
                    value=""
                  />
                </div>
                <p
                  class="MuiFormHelperText-root Mui-error css-14799pm-MuiFormHelperText-root"
                  data-testid="card-holder-error"
                >
                  <span
                    class="notranslate"
                  >
                    ​
                  </span>
                </p>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-3 css-1r7mx2p-MuiGrid-root"
              />
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-3 css-1rjcsn7-MuiGrid-root"
              >
                <label
                  class="MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-root MuiFormLabel-colorPrimary Mui-required css-im7n4l-MuiFormLabel-root-MuiInputLabel-root"
                  data-shrink="false"
                  for="streetAddress"
                >
                  <span
                    class="MuiTypography-root MuiTypography-body1 css-1nelj9t-MuiTypography-root"
                  >
                    Address
                  </span>
                  <span
                    aria-hidden="true"
                    class="MuiInputLabel-asterisk MuiFormLabel-asterisk css-kclkbf-MuiFormLabel-asterisk"
                  >
                     
                    *
                  </span>
                </label>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 css-1m6pi2w-MuiGrid-root"
              >
                <div
                  class="MuiInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth css-9dwq1y-MuiInputBase-root-MuiInput-root"
                  required=""
                >
                  <input
                    aria-invalid="false"
                    class="MuiInput-input MuiInputBase-input css-1h0oku3-MuiInputBase-input-MuiInput-input"
                    data-testid="street-address-input"
                    id="streetAddress"
                    name="streetAddress"
                    placeholder="Address"
                    required=""
                    type="text"
                    value=""
                  />
                </div>
                <p
                  class="MuiFormHelperText-root Mui-error css-14799pm-MuiFormHelperText-root"
                >
                  <span
                    class="notranslate"
                  >
                    ​
                  </span>
                </p>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-3 css-1r7mx2p-MuiGrid-root"
              />
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-3 css-1rjcsn7-MuiGrid-root"
              >
                <label
                  class="MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-root MuiFormLabel-colorPrimary Mui-required css-im7n4l-MuiFormLabel-root-MuiInputLabel-root"
                  data-shrink="false"
                  for="city"
                >
                  <span
                    class="MuiTypography-root MuiTypography-body1 css-1nelj9t-MuiTypography-root"
                  >
                    City
                  </span>
                  <span
                    aria-hidden="true"
                    class="MuiInputLabel-asterisk MuiFormLabel-asterisk css-kclkbf-MuiFormLabel-asterisk"
                  >
                     
                    *
                  </span>
                </label>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 css-1m6pi2w-MuiGrid-root"
              >
                <div
                  class="MuiInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth css-9dwq1y-MuiInputBase-root-MuiInput-root"
                  required=""
                >
                  <input
                    aria-invalid="false"
                    class="MuiInput-input MuiInputBase-input css-1h0oku3-MuiInputBase-input-MuiInput-input"
                    data-testid="city-input"
                    id="city"
                    name="city"
                    placeholder="City"
                    required=""
                    type="text"
                    value=""
                  />
                </div>
                <p
                  class="MuiFormHelperText-root Mui-error css-14799pm-MuiFormHelperText-root"
                >
                  <span
                    class="notranslate"
                  >
                    ​
                  </span>
                </p>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-3 css-1r7mx2p-MuiGrid-root"
              />
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-3 css-1rjcsn7-MuiGrid-root"
              >
                <label
                  class="MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-root MuiFormLabel-colorPrimary Mui-required css-im7n4l-MuiFormLabel-root-MuiInputLabel-root"
                  data-shrink="false"
                  for="postalCode"
                >
                  <span
                    class="MuiTypography-root MuiTypography-body1 css-1nelj9t-MuiTypography-root"
                  >
                    State / Zip Code
                  </span>
                  <span
                    aria-hidden="true"
                    class="MuiInputLabel-asterisk MuiFormLabel-asterisk css-kclkbf-MuiFormLabel-asterisk"
                  >
                     
                    *
                  </span>
                </label>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 css-1m6pi2w-MuiGrid-root"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-4 css-480o17-MuiGrid-root"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-md-5 css-1g4olat-MuiGrid-root"
                  >
                    <div
                      class="MuiInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth css-158wf4r-MuiInputBase-root-MuiInput-root"
                    >
                      <div
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        aria-labelledby="state"
                        class="MuiSelect-select MuiSelect-outlined MuiInput-input MuiInputBase-input css-hb27wf-MuiSelect-select-MuiInputBase-input-MuiInput-input"
                        id="state"
                        role="button"
                        tabindex="0"
                      >
                        State
                      </div>
                      <input
                        aria-hidden="true"
                        class="MuiSelect-nativeInput css-yf8vq0-MuiSelect-nativeInput"
                        data-testid="state-input"
                        name="state"
                        tabindex="-1"
                        value=""
                      />
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconOutlined css-hfutr2-MuiSvgIcon-root-MuiSelect-icon"
                        data-testid="ArrowDropDownIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M7 10l5 5 5-5z"
                        />
                      </svg>
                    </div>
                    <p
                      class="MuiFormHelperText-root css-f30th0-MuiFormHelperText-root"
                    >
                      <span
                        class="notranslate"
                      >
                        ​
                      </span>
                    </p>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-md-7 css-34dgbo-MuiGrid-root"
                  >
                    <div
                      class="MuiInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth css-9dwq1y-MuiInputBase-root-MuiInput-root"
                      required=""
                    >
                      <input
                        aria-invalid="false"
                        class="MuiInput-input MuiInputBase-input css-1h0oku3-MuiInputBase-input-MuiInput-input"
                        data-testid="postal-code-input"
                        id="postalCode"
                        name="postalCode"
                        placeholder="Zip Code"
                        required=""
                        type="text"
                        value=""
                      />
                    </div>
                    <p
                      class="MuiFormHelperText-root Mui-error css-14799pm-MuiFormHelperText-root"
                    >
                      <span
                        class="notranslate"
                      >
                        ​
                      </span>
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-3 css-1r7mx2p-MuiGrid-root"
              />
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-3 css-1r7mx2p-MuiGrid-root"
              />
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 css-159td0a-MuiGrid-root"
              >
                <label
                  class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-j204z7-MuiFormControlLabel-root"
                >
                  <span
                    class="MuiCheckbox-root MuiCheckbox-colorPrimary MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root Mui-checked css-1rq1t8t-MuiButtonBase-root-MuiCheckbox-root"
                  >
                    <input
                      checked=""
                      class="PrivateSwitchBase-input css-1m9pwf3"
                      data-indeterminate="false"
                      id="saveCard"
                      name="saveCard"
                      type="checkbox"
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                      data-testid="CheckBoxIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                      />
                    </svg>
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </span>
                  <span
                    class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-1k41qqb-MuiTypography-root"
                  >
                    Save card to Account
                  </span>
                </label>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-3 css-1r7mx2p-MuiGrid-root"
              />
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-3 css-1r7mx2p-MuiGrid-root"
              />
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 css-qsn9z9-MuiGrid-root"
              >
                <div
                  class="MuiBox-root css-4fwt92"
                >
                  <div
                    class="MuiBox-root css-xvkg36"
                  >
                    <button
                      class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButtonBase-root  css-q7mvqv-MuiButtonBase-root-MuiButton-root"
                      data-testid="add-new-card-button"
                      tabindex="0"
                      type="submit"
                    >
                      <span
                        class="MuiButton-startIcon MuiButton-iconSizeMedium css-1sx3uk1-MuiButton-startIcon"
                      >
                        <svg>
                          launch.svg
                        </svg>
                      </span>
                      Add new card
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiBox-root css-704axj"
            >
              <hr
                class="MuiDivider-root MuiDivider-fullWidth MuiDivider-light css-1acisye-MuiDivider-root"
              />
            </div>
          </form>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-3 css-1r7mx2p-MuiGrid-root"
      />
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-9 css-coobyg-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-rcvewn"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`CreditCard expect to match snapshot while add and valid cc data 1`] = `
<div>
  <div
    class="MuiBox-root css-iqsdt1"
  >
    <div
      class="MuiGrid-root MuiGrid-container css-1vam7s3-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-3 css-1rjcsn7-MuiGrid-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1nelj9t-MuiTypography-root"
        >
          Selected Card
        </p>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 css-1m6pi2w-MuiGrid-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap css-1ph717y-MuiTypography-root"
        >
          <svg
            class="MuiBox-root css-6rlkhh"
            data-testId="Visa"
            sx="[object Object]"
          >
            cc_visa.svg
          </svg>
          <span
            class="MuiBox-root css-8i1y65"
          >
            **** 
            1234567890123456
          </span>
           
          10/28
        </p>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-3 css-1r7mx2p-MuiGrid-root"
      />
    </div>
    <div
      class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-h5fkc8"
        >
          <hr
            class="MuiDivider-root MuiDivider-fullWidth MuiDivider-light css-1acisye-MuiDivider-root"
          />
        </div>
        <div
          class="MuiBox-root css-h5fkc8"
        >
          <form
            class="MuiBox-root css-79elbk"
            novalidate=""
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-ymr52d-MuiTypography-root"
            >
              Enter billing information associated with your credit card.
            </p>
            <div
              class="MuiGrid-root MuiGrid-container css-1vam7s3-MuiGrid-root"
            >
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-3 css-1rjcsn7-MuiGrid-root"
              >
                <label
                  class="MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-root MuiFormLabel-colorPrimary Mui-required css-im7n4l-MuiFormLabel-root-MuiInputLabel-root"
                  data-shrink="false"
                  for="cardHolder"
                >
                  <span
                    class="MuiTypography-root MuiTypography-body1 css-1nelj9t-MuiTypography-root"
                  >
                    Name
                  </span>
                  <span
                    aria-hidden="true"
                    class="MuiInputLabel-asterisk MuiFormLabel-asterisk css-kclkbf-MuiFormLabel-asterisk"
                  >
                     
                    *
                  </span>
                </label>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 css-1m6pi2w-MuiGrid-root"
              >
                <div
                  class="MuiInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth css-9dwq1y-MuiInputBase-root-MuiInput-root"
                  required=""
                >
                  <input
                    aria-invalid="false"
                    class="MuiInput-input MuiInputBase-input css-1h0oku3-MuiInputBase-input-MuiInput-input"
                    data-testid="card-holder-input"
                    id="cardHolder"
                    name="cardHolder"
                    placeholder="Name"
                    required=""
                    type="text"
                    value=""
                  />
                </div>
                <p
                  class="MuiFormHelperText-root Mui-error css-14799pm-MuiFormHelperText-root"
                  data-testid="card-holder-error"
                >
                  <span
                    class="notranslate"
                  >
                    ​
                  </span>
                </p>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-3 css-1r7mx2p-MuiGrid-root"
              />
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-3 css-1rjcsn7-MuiGrid-root"
              >
                <label
                  class="MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-root MuiFormLabel-colorPrimary Mui-required css-im7n4l-MuiFormLabel-root-MuiInputLabel-root"
                  data-shrink="false"
                  for="streetAddress"
                >
                  <span
                    class="MuiTypography-root MuiTypography-body1 css-1nelj9t-MuiTypography-root"
                  >
                    Address
                  </span>
                  <span
                    aria-hidden="true"
                    class="MuiInputLabel-asterisk MuiFormLabel-asterisk css-kclkbf-MuiFormLabel-asterisk"
                  >
                     
                    *
                  </span>
                </label>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 css-1m6pi2w-MuiGrid-root"
              >
                <div
                  class="MuiInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth css-9dwq1y-MuiInputBase-root-MuiInput-root"
                  required=""
                >
                  <input
                    aria-invalid="false"
                    class="MuiInput-input MuiInputBase-input css-1h0oku3-MuiInputBase-input-MuiInput-input"
                    data-testid="street-address-input"
                    id="streetAddress"
                    name="streetAddress"
                    placeholder="Address"
                    required=""
                    type="text"
                    value=""
                  />
                </div>
                <p
                  class="MuiFormHelperText-root Mui-error css-14799pm-MuiFormHelperText-root"
                >
                  <span
                    class="notranslate"
                  >
                    ​
                  </span>
                </p>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-3 css-1r7mx2p-MuiGrid-root"
              />
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-3 css-1rjcsn7-MuiGrid-root"
              >
                <label
                  class="MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-root MuiFormLabel-colorPrimary Mui-required css-im7n4l-MuiFormLabel-root-MuiInputLabel-root"
                  data-shrink="false"
                  for="city"
                >
                  <span
                    class="MuiTypography-root MuiTypography-body1 css-1nelj9t-MuiTypography-root"
                  >
                    City
                  </span>
                  <span
                    aria-hidden="true"
                    class="MuiInputLabel-asterisk MuiFormLabel-asterisk css-kclkbf-MuiFormLabel-asterisk"
                  >
                     
                    *
                  </span>
                </label>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 css-1m6pi2w-MuiGrid-root"
              >
                <div
                  class="MuiInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth css-9dwq1y-MuiInputBase-root-MuiInput-root"
                  required=""
                >
                  <input
                    aria-invalid="false"
                    class="MuiInput-input MuiInputBase-input css-1h0oku3-MuiInputBase-input-MuiInput-input"
                    data-testid="city-input"
                    id="city"
                    name="city"
                    placeholder="City"
                    required=""
                    type="text"
                    value=""
                  />
                </div>
                <p
                  class="MuiFormHelperText-root Mui-error css-14799pm-MuiFormHelperText-root"
                >
                  <span
                    class="notranslate"
                  >
                    ​
                  </span>
                </p>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-3 css-1r7mx2p-MuiGrid-root"
              />
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-3 css-1rjcsn7-MuiGrid-root"
              >
                <label
                  class="MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-root MuiFormLabel-colorPrimary Mui-required css-im7n4l-MuiFormLabel-root-MuiInputLabel-root"
                  data-shrink="false"
                  for="postalCode"
                >
                  <span
                    class="MuiTypography-root MuiTypography-body1 css-1nelj9t-MuiTypography-root"
                  >
                    State / Zip Code
                  </span>
                  <span
                    aria-hidden="true"
                    class="MuiInputLabel-asterisk MuiFormLabel-asterisk css-kclkbf-MuiFormLabel-asterisk"
                  >
                     
                    *
                  </span>
                </label>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 css-1m6pi2w-MuiGrid-root"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-4 css-480o17-MuiGrid-root"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-md-5 css-1g4olat-MuiGrid-root"
                  >
                    <div
                      class="MuiInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth css-158wf4r-MuiInputBase-root-MuiInput-root"
                    >
                      <div
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        aria-labelledby="state"
                        class="MuiSelect-select MuiSelect-outlined MuiInput-input MuiInputBase-input css-hb27wf-MuiSelect-select-MuiInputBase-input-MuiInput-input"
                        id="state"
                        role="button"
                        tabindex="0"
                      >
                        State
                      </div>
                      <input
                        aria-hidden="true"
                        class="MuiSelect-nativeInput css-yf8vq0-MuiSelect-nativeInput"
                        data-testid="state-input"
                        name="state"
                        tabindex="-1"
                        value=""
                      />
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconOutlined css-hfutr2-MuiSvgIcon-root-MuiSelect-icon"
                        data-testid="ArrowDropDownIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M7 10l5 5 5-5z"
                        />
                      </svg>
                    </div>
                    <p
                      class="MuiFormHelperText-root css-f30th0-MuiFormHelperText-root"
                    >
                      <span
                        class="notranslate"
                      >
                        ​
                      </span>
                    </p>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-md-7 css-34dgbo-MuiGrid-root"
                  >
                    <div
                      class="MuiInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth css-9dwq1y-MuiInputBase-root-MuiInput-root"
                      required=""
                    >
                      <input
                        aria-invalid="false"
                        class="MuiInput-input MuiInputBase-input css-1h0oku3-MuiInputBase-input-MuiInput-input"
                        data-testid="postal-code-input"
                        id="postalCode"
                        name="postalCode"
                        placeholder="Zip Code"
                        required=""
                        type="text"
                        value=""
                      />
                    </div>
                    <p
                      class="MuiFormHelperText-root Mui-error css-14799pm-MuiFormHelperText-root"
                    >
                      <span
                        class="notranslate"
                      >
                        ​
                      </span>
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-3 css-1r7mx2p-MuiGrid-root"
              />
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-3 css-1r7mx2p-MuiGrid-root"
              />
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 css-159td0a-MuiGrid-root"
              >
                <label
                  class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-j204z7-MuiFormControlLabel-root"
                >
                  <span
                    class="MuiCheckbox-root MuiCheckbox-colorPrimary MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root Mui-checked css-1rq1t8t-MuiButtonBase-root-MuiCheckbox-root"
                  >
                    <input
                      checked=""
                      class="PrivateSwitchBase-input css-1m9pwf3"
                      data-indeterminate="false"
                      id="saveCard"
                      name="saveCard"
                      type="checkbox"
                    />
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                      data-testid="CheckBoxIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                      />
                    </svg>
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </span>
                  <span
                    class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-1k41qqb-MuiTypography-root"
                  >
                    Save card to Account
                  </span>
                </label>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-3 css-1r7mx2p-MuiGrid-root"
              />
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-3 css-1r7mx2p-MuiGrid-root"
              />
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 css-qsn9z9-MuiGrid-root"
              >
                <div
                  class="MuiBox-root css-4fwt92"
                >
                  <div
                    class="MuiBox-root css-xvkg36"
                  >
                    <button
                      class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButtonBase-root  css-q7mvqv-MuiButtonBase-root-MuiButton-root"
                      data-testid="add-new-card-button"
                      tabindex="0"
                      type="submit"
                    >
                      <span
                        class="MuiButton-startIcon MuiButton-iconSizeMedium css-1sx3uk1-MuiButton-startIcon"
                      >
                        <svg>
                          launch.svg
                        </svg>
                      </span>
                      Add new card
                    </button>
                  </div>
                  <button
                    class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-disableElevation MuiButtonBase-root  css-1qs96lt-MuiButtonBase-root-MuiButton-root"
                    data-testid="cancel-add-new-card-button"
                    tabindex="0"
                    type="button"
                  >
                    Cancel
                  </button>
                </div>
              </div>
            </div>
            <div
              class="MuiBox-root css-704axj"
            >
              <hr
                class="MuiDivider-root MuiDivider-fullWidth MuiDivider-light css-1acisye-MuiDivider-root"
              />
            </div>
          </form>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-3 css-1r7mx2p-MuiGrid-root"
      />
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-9 css-coobyg-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-rcvewn"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`CreditCard expect to match snapshot while change 1`] = `
<div>
  <div
    class="MuiBox-root css-iqsdt1"
  >
    <div
      class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-3 css-1rjcsn7-MuiGrid-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-17rdl0m-MuiTypography-root"
        >
          Saved Cards
        </p>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 css-1m6pi2w-MuiGrid-root"
      >
        <div
          aria-label="saved-cards"
          class="MuiFormGroup-root css-dmmspl-MuiFormGroup-root"
          role="radiogroup"
        />
        <button
          class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-disableElevation MuiButtonBase-root  css-1w795cb-MuiButtonBase-root-MuiButton-root"
          data-testid="add-card-button"
          tabindex="0"
          type="button"
        >
          Add new card
        </button>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-3 css-1r7mx2p-MuiGrid-root"
      />
    </div>
    <div
      class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-3 css-1r7mx2p-MuiGrid-root"
      />
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-9 css-coobyg-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-rcvewn"
        >
          <button
            class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButtonBase-root Mui-disabled  css-q7mvqv-MuiButtonBase-root-MuiButton-root"
            data-testid="use-selected-card-button"
            disabled=""
            tabindex="-1"
            type="button"
          >
            Use Selected Card
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CreditCard expect to match snapshot while change with creditCardData 1`] = `
<div>
  <div
    class="MuiBox-root css-iqsdt1"
  >
    <div
      class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-3 css-1rjcsn7-MuiGrid-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-17rdl0m-MuiTypography-root"
        >
          Saved Cards
        </p>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 css-1m6pi2w-MuiGrid-root"
      >
        <div
          aria-label="saved-cards"
          class="MuiFormGroup-root css-dmmspl-MuiFormGroup-root"
          role="radiogroup"
        >
          <label
            class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-1bvr66z-MuiFormControlLabel-root"
          >
            <span
              class="MuiRadio-root MuiRadio-colorPrimary MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary PrivateSwitchBase-root css-384ny3-MuiButtonBase-root-MuiRadio-root"
            >
              <input
                class="PrivateSwitchBase-input css-1m9pwf3"
                name="savedCards"
                type="radio"
                value="test"
              />
              <span
                class="css-hyxlzm"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1hbvpl3-MuiSvgIcon-root"
                  data-testid="RadioButtonUncheckedIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1hhw7if-MuiSvgIcon-root"
                  data-testid="RadioButtonCheckedIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </span>
            <span
              class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-1k41qqb-MuiTypography-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap css-1ph717y-MuiTypography-root"
              >
                <svg
                  class="MuiBox-root css-6rlkhh"
                  data-testId="Visa"
                  sx="[object Object]"
                >
                  cc_visa.svg
                </svg>
                <span
                  class="MuiBox-root css-8i1y65"
                >
                  **** 
                  1234567890123456
                </span>
                 
                10/28
              </p>
            </span>
          </label>
          <label
            class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-1jh3u6s-MuiFormControlLabel-root"
          >
            <span
              class="MuiRadio-root MuiRadio-colorPrimary MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary PrivateSwitchBase-root css-384ny3-MuiButtonBase-root-MuiRadio-root"
            >
              <input
                class="PrivateSwitchBase-input css-1m9pwf3"
                name="savedCards"
                type="radio"
                value="test"
              />
              <span
                class="css-hyxlzm"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1hbvpl3-MuiSvgIcon-root"
                  data-testid="RadioButtonUncheckedIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1hhw7if-MuiSvgIcon-root"
                  data-testid="RadioButtonCheckedIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
              />
            </span>
            <span
              class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-1k41qqb-MuiTypography-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap css-1ph717y-MuiTypography-root"
              >
                <svg
                  class="MuiBox-root css-6rlkhh"
                  data-testId="Visa"
                  sx="[object Object]"
                >
                  cc_visa.svg
                </svg>
                <span
                  class="MuiBox-root css-8i1y65"
                >
                  **** 
                  1234567890123456
                </span>
                 
                10/28
              </p>
            </span>
          </label>
        </div>
        <button
          class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-disableElevation MuiButtonBase-root  css-1w795cb-MuiButtonBase-root-MuiButton-root"
          data-testid="add-card-button"
          tabindex="0"
          type="button"
        >
          Add new card
        </button>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-3 css-1r7mx2p-MuiGrid-root"
      />
    </div>
    <div
      class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-3 css-1r7mx2p-MuiGrid-root"
      />
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-9 css-coobyg-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-rcvewn"
        >
          <button
            class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButtonBase-root Mui-disabled  css-q7mvqv-MuiButtonBase-root-MuiButton-root"
            data-testid="use-selected-card-button"
            disabled=""
            tabindex="-1"
            type="button"
          >
            Use Selected Card
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CreditCard expect to match snapshot while loading 1`] = `
<div>
  <div
    class="MuiBox-root css-1245d0p"
  >
    <div
      class="MuiBox-root css-1nen2z4"
      data-testid="loader-component"
    >
      <div
        class="MuiBox-root css-hyxlzm"
      >
        <span
          aria-valuenow="100"
          class="MuiCircularProgress-root MuiCircularProgress-determinate MuiCircularProgress-colorPrimary css-1wyqyef-MuiCircularProgress-root"
          role="progressbar"
          style="width: 80px; height: 80px; transform: rotate(-90deg);"
        >
          <svg
            class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle MuiCircularProgress-circleDeterminate css-oxts8u-MuiCircularProgress-circle"
              cx="44"
              cy="44"
              fill="none"
              r="19.5"
              stroke-width="5"
              style="stroke-dasharray: 122.522; stroke-dashoffset: 0.000px;"
            />
          </svg>
        </span>
        <span
          class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-1gse1c1-MuiCircularProgress-root"
          role="progressbar"
          style="width: 80px; height: 80px;"
        >
          <svg
            class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
              cx="44"
              cy="44"
              fill="none"
              r="19.5"
              stroke-width="5"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`CreditCard expect to match snapshot while selected and creditCardData 1`] = `
<div>
  <div
    class="MuiBox-root css-iqsdt1"
  >
    <div
      class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-3 css-1r7mx2p-MuiGrid-root"
      />
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-9 css-coobyg-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-rcvewn"
        >
          <button
            class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-disableElevation MuiButtonBase-root  css-wyox7y-MuiButtonBase-root-MuiButton-root"
            data-testid="change-card-button"
            tabindex="0"
            type="button"
          >
            Change card
          </button>
          <hr
            class="MuiDivider-root MuiDivider-fullWidth MuiDivider-vertical MuiDivider-flexItem css-o5a53q-MuiDivider-root"
          />
          <button
            class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-disableElevation MuiButtonBase-root  css-wyox7y-MuiButtonBase-root-MuiButton-root"
            data-testid="add-card-button"
            tabindex="0"
            type="button"
          >
            Add new card
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CreditCard expect to match snapshot while updating list 1`] = `
<div>
  <div
    class="MuiBox-root css-iqsdt1"
  >
    <div
      class="MuiBox-root css-1tl0rlc"
      data-testid="loader-component"
    >
      <div
        class="MuiBox-root css-hyxlzm"
      >
        <span
          aria-valuenow="100"
          class="MuiCircularProgress-root MuiCircularProgress-determinate MuiCircularProgress-colorPrimary css-1wyqyef-MuiCircularProgress-root"
          role="progressbar"
          style="width: 80px; height: 80px; transform: rotate(-90deg);"
        >
          <svg
            class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle MuiCircularProgress-circleDeterminate css-oxts8u-MuiCircularProgress-circle"
              cx="44"
              cy="44"
              fill="none"
              r="19.5"
              stroke-width="5"
              style="stroke-dasharray: 122.522; stroke-dashoffset: 0.000px;"
            />
          </svg>
        </span>
        <span
          class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-1gse1c1-MuiCircularProgress-root"
          role="progressbar"
          style="width: 80px; height: 80px;"
        >
          <svg
            class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
              cx="44"
              cy="44"
              fill="none"
              r="19.5"
              stroke-width="5"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container css-1vam7s3-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-3 css-1rjcsn7-MuiGrid-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1nelj9t-MuiTypography-root"
        >
          Selected Card
        </p>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 css-1m6pi2w-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-k008qs"
        >
          <span
            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-znkg57-MuiSkeleton-root"
            style="width: 38px;"
          />
          <span
            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-znkg57-MuiSkeleton-root"
            style="width: 140px;"
          />
          <span
            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-znkg57-MuiSkeleton-root"
            style="width: 43px;"
          />
          <span
            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-qgjjcq-MuiSkeleton-root"
            style="width: 55px;"
          />
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-3 css-1r7mx2p-MuiGrid-root"
      />
    </div>
    <div
      class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-3 css-1r7mx2p-MuiGrid-root"
      />
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-9 css-coobyg-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-rcvewn"
        >
          <button
            class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-disableElevation MuiButtonBase-root  css-wyox7y-MuiButtonBase-root-MuiButton-root"
            data-testid="add-card-button"
            tabindex="0"
            type="button"
          >
            Add new card
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CreditCard expect to match snapshot with basic props 1`] = `
<div>
  <div
    class="MuiBox-root css-iqsdt1"
  >
    <div
      class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-3 css-1r7mx2p-MuiGrid-root"
      />
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-9 css-coobyg-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-rcvewn"
        >
          <button
            class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-disableElevation MuiButtonBase-root  css-wyox7y-MuiButtonBase-root-MuiButton-root"
            data-testid="add-card-button"
            tabindex="0"
            type="button"
          >
            Add new card
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CreditCard expect to match snapshot with valid credit card 1`] = `
<div>
  <div
    class="MuiBox-root css-iqsdt1"
  >
    <div
      class="MuiGrid-root MuiGrid-container css-1vam7s3-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-3 css-1rjcsn7-MuiGrid-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1nelj9t-MuiTypography-root"
        >
          Selected Card
        </p>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 css-1m6pi2w-MuiGrid-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap css-1ph717y-MuiTypography-root"
        >
          <svg
            class="MuiBox-root css-6rlkhh"
            data-testId="Visa"
            sx="[object Object]"
          >
            cc_visa.svg
          </svg>
          <span
            class="MuiBox-root css-8i1y65"
          >
            **** 
            1234567890123456
          </span>
           
          10/28
        </p>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-3 css-1r7mx2p-MuiGrid-root"
      />
    </div>
    <div
      class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-md-3 css-1r7mx2p-MuiGrid-root"
      />
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-9 css-coobyg-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-rcvewn"
        >
          <button
            class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-disableElevation MuiButtonBase-root  css-wyox7y-MuiButtonBase-root-MuiButton-root"
            data-testid="add-card-button"
            tabindex="0"
            type="button"
          >
            Add new card
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
